added paths in swagger.json
